# alpine-career

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: .gitkeep  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/: .gitkeep
config/environments/: .gitkeep
config/schemas/: .gitkeep
docs/: MASTER_INDEX.md
docs/00_blueprints/: BP-001_Vision_Product_Principles.md  BP-002_User_Journey.md  BP-003_User_Profile.md  BP-004_Autonomous_Career_Engine.md  BP-005_Autonomous_Agent_System.md  BP-006_Workflow_Engine.md  BP-007_AI_System.md  BP-008_Integrations.md  BP-009_Platform_Architecture_SaaS_Operations.md  BP-010_Product_Roadmap.md
docs/01_project_brain/: 01_PROJECT_OVERVIEW.md  02_PRODUCT_RULES.md  03_AI_RULES.md  04_ARCHITECTURE_RULES.md  05_CODING_RULES.md  06_EVENT_SYSTEM.md  07_AGENT_RULES.md  08_DATABASE_RULES.md  09_SECURITY_RULES.md  10_DEFINITION_OF_DONE.md  11_CLAUDE_RULEBOOK.md  12_DEVELOPMENT_PLAYBOOK.md  13_SYSTEM_PROMPT.md
docs/ai/: .gitkeep  AGENTS.md
docs/architecture/: .gitkeep  ARCHITECTURE.md  DECISIONS.md
docs/business/: .gitkeep
docs/decisions/: .gitkeep  ADR-001-monorepo-struktur.md  ADR-002-python-fastapi.md  ADR-003-modular-monolith.md  ADR-004-traefik-reverse-proxy.md  ADR-005-row-level-multi-tenancy.md
docs/engineering/: .gitkeep  CODING_STANDARDS.md  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  SECURITY.md  development-workflow.md  git-strategy.md  issue-workflow.md  release-strategy.md
docs/operations/: .gitkeep  CHANGELOG.md  deployment-strategy.md  logging-strategy.md  monitoring-strategy.md  testing-strategy.md
scripts/: gmail_auth.py  gmail_auth_oob.py
(+72 files in other folders)
