[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "alpine-career"
version = "0.1.0"
description = "KI-gestuetzte SaaS-Plattform fuer Karrieremanagement und Bewerbungsoptimierung"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Alpine Career Team" },
]
dependencies = [
  "python-telegram-bot[job-queue]>=21.0,<22.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "anthropic>=0.40,<1.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.0",
  "python-jobspy>=1.1,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "fpdf2>=2.8,<3.0",
  "google-api-python-client>=2.130,<3.0",
  "google-auth-httplib2>=0.2,<1.0",
  "google-auth-oauthlib>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "factory-boy>=3.3",
  "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "S",    # flake8-bandit
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["alpine_career"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: Unit-Tests",
  "integration: Integrationstests",
  "e2e: End-to-End-Tests",
  "slow: Langsame Tests",
]
